--- a/examples/examples.html
+++ b/examples/examples.html
@@ -19,15 +19,15 @@
         <script type="text/javascript">
             $( document ).ready(function() {
                $('#example1').floatLabel({
-                    offsetx     : '3px'
+                    leftOffset     : '0px',
+                    topOffset      : '-14px'
                 });
             });
         </script>
     </head>
     <body>
         <div id="content">
-            <h1>floatlabel.js</h1>
-            Enter your name below:
+            <h1>floatlabel.js</h1>            
             <div id="example1">
                 <input type="text" id="fname" placeholder="First name" />   <br/>
                 <input type="text" id="mname" placeholder="Middle Name" />  <br/>
