Cleanup and Color options
Cleaned up code

Adjusted code to work better proportionally with smaller fields

Added label colour and font options

--- a/examples/examples.html
+++ b/examples/examples.html
@@ -20,8 +20,8 @@
             $( document ).ready(function() {
                     $('#example1').floatLabel({
                         leftOffset     : '0px',  //left attribute of label
-                        topOffset      : '0px',//top attribute of label
-                        animationSpeed : 125     //how fast the label shows/hides
+                        topOffset      : '0px',  //top attribute of label
+                        animationSpeed : 125
                     });  
             });
         </script>
@@ -30,9 +30,9 @@
         <div id="content">
             <h1 style="text-align:center;">floatlabel.js</h1>            
             <div id="example1">
-                <input type="text" id="fname" placeholder="First name" />   <br/>
-                <input type="text" id="mname" placeholder="Middle Name" />  <br/>
-                <input type="text" id="lname" placeholder="Last name" />    <br/>
+                <input type="text" id="fname" placeholder="First name" /> 
+                <input type="text" id="mname" placeholder="Middle Name" />
+                <input type="text" id="lname" placeholder="Last name" />
             </div>
         </div>
     </body>
