Fixed js and css reference
Was pointing to local file

--- a/examples/examples.html
+++ b/examples/examples.html
@@ -12,8 +12,8 @@
         <script src="http://code.jquery.com/jquery-2.1.0.min.js" /></script>
         
         <!-- load floatTable and its css -->
-        <script src="/Users/torrobinson/floatlabel.js/floatlabel.jquery.js"></script>
-        <link rel="stylesheet" type="text/css" href="/Users/torrobinson/floatlabel.js/floatlable.jquery.css">
+        <script src="../floatlabel.jquery.js"></script>
+        <link rel="stylesheet" type="text/css" href="../floatlable.jquery.css">
         
         <!-- Initiate floatTables on an element that contains input elements -->
         <script type="text/javascript">
