Updated to match current read me.md

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 </table><h4>
 <a name="compatibility" class="anchor" href="#compatibility"><span class="octicon octicon-link"></span></a>Compatibility</h4>
 
-<p>The plugin currently works on webkit browsers by default, and a fallback method to support the 'placeholder' attribute has been added to support older browsers (read: IE) which might not support placeholders.</p>
+<p>Chrome, Opera, Firefox, Safari, and IE9+ should work no problem with floatlabels.js</p>
       </section>
       <footer>
         <p>Project maintained by <a href="https://github.com/torrobinson">torrobinson</a></p>
