--- a/index.html
+++ b/index.html
@@ -4,45 +4,35 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Floatlabel.js by torrobinson</title>
+
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/main.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
   <body>
-
+    <div class="wrapper">
       <header>
         <h1>Floatlabel.js</h1>
         <p>Tiny jQuery implementation of the Float Labels design pattern</p>
+
+        <p class="view"><a href="https://github.com/torrobinson/floatlabel.js">View the Project on GitHub <small>torrobinson/floatlabel.js</small></a></p>
+
+
+        <ul>
+          <li><a href="https://github.com/torrobinson/floatlabel.js/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/torrobinson/floatlabel.js/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/torrobinson/floatlabel.js">View On <strong>GitHub</strong></a></li>
+        </ul>
       </header>
-
-      <div id="banner">
-        <span id="logo"></span>
-
-        <a href="https://github.com/torrobinson/floatlabel.js" class="button fork"><strong>View On GitHub</strong></a>
-        <div class="downloads">
-          <span>Downloads:</span>
-          <ul>
-            <li><a href="https://github.com/torrobinson/floatlabel.js/zipball/master" class="button">ZIP</a></li>
-            <li><a href="https://github.com/torrobinson/floatlabel.js/tarball/master" class="button">TAR</a></li>
-          </ul>
-        </div>
-      </div><!-- end banner -->
-
-    <div class="wrapper">
-      <nav>
-        <ul></ul>
-      </nav>
       <section>
-        <h1>
+        <h1 align="center">
 <a name="floatlabeljs" class="anchor" href="#floatlabeljs"><span class="octicon octicon-link"></span></a>floatlabel.js</h1>
 
-<p><img src="http://www.torrobinson.com/files/floatlabelgif2-BUEfAyKT0q.gif" alt="floatlabel"></p>
+<p align="center">
+  <img src="http://www.torrobinson.com/files/floatlabelgif2-BUEfAyKT0q.gif"></p>
 
 <h3>
 <a name="demo" class="anchor" href="#demo"><span class="octicon octicon-link"></span></a>Demo</h3>
@@ -76,11 +66,9 @@
 <h4>
 <a name="initiate-the-plugin" class="anchor" href="#initiate-the-plugin"><span class="octicon octicon-link"></span></a>Initiate the plugin</h4>
 
-<div class="highlight highlight-javascript"><pre><span class="o">&lt;</span><span class="nx">script</span> <span class="nx">type</span><span class="o">=</span><span class="s2">"text/javascript"</span><span class="o">&gt;</span>
-            <span class="nx">$</span><span class="p">(</span> <span class="nb">document</span> <span class="p">).</span><span class="nx">ready</span><span class="p">(</span><span class="kd">function</span><span class="p">()</span> <span class="p">{</span>
-                    <span class="nx">$</span><span class="p">(</span><span class="s1">'#example1'</span><span class="p">).</span><span class="nx">floatLabel</span><span class="p">();</span>  
-            <span class="p">});</span>
-<span class="o">&lt;</span><span class="err">/script&gt;</span>
+<div class="highlight highlight-javascript"><pre><span class="nx">$</span><span class="p">(</span> <span class="nb">document</span> <span class="p">).</span><span class="nx">ready</span><span class="p">(</span><span class="kd">function</span><span class="p">()</span> <span class="p">{</span>
+     <span class="nx">$</span><span class="p">(</span><span class="s1">'#example1'</span><span class="p">).</span><span class="nx">floatLabel</span><span class="p">();</span>  
+<span class="p">});</span>
 </pre></div>
 
 <h4>
@@ -127,11 +115,11 @@
 <p>Chrome, Opera, Firefox, Safari, and IE9+ should work no problem with floatlabels.js</p>
       </section>
       <footer>
-        <p>Project maintained by <a href="https://github.com/torrobinson">torrobinson</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
+        <p>This project is maintained by <a href="https://github.com/torrobinson">torrobinson</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+    <script src="javascripts/scale.fix.js"></script>
     
   </body>
 </html>
