--- a/examples/examples.html
+++ b/examples/examples.html
@@ -12,7 +12,7 @@
         <script src="http://code.jquery.com/jquery-2.1.0.min.js" /></script>
         
         <!-- load floatTable and its css -->
-        <script src="../floatlabel.jquery.js"></script>
+        <script src="../floatlabel.jquery.min.js"></script>
         <link rel="stylesheet" type="text/css" href="../floatlable.jquery.css">
         
         <!-- Initiate floatTables on an element that contains input elements -->
@@ -30,7 +30,7 @@
         <div id="content">
             <h1 style="text-align:center;">floatlabel.js</h1>            
             <div id="example1">
-                <input type="text" id="fname" placeholder="First name" /> 
+                <input type="text" id="fname" placeholder="First name" value="Existing value." /> 
                 <input type="text" id="mname" placeholder="Middle Name" />
                 <input type="text" id="lname" placeholder="Last name" />
             </div>
